progress companion website

--- a/companionWebsite/client/styles/styles.scss
+++ b/companionWebsite/client/styles/styles.scss
@@ -9,3 +9,10 @@ footer {
 img {
   border-radius: 50%;
 }
+
+.code {
+  background-color: lightgrey;
+  border-style: solid;
+  border-color: lightcoral;
+  border-width: 0.1rem;
+}
